@@ -1,3 +1,9 @@
+2015-10-29  David Lawrence Ramsey  <pooka109@gmail.com>
+	* src/files.c (do_writeout), src/nano.c (no_current_file_name_warning,
+	do_exit): When option -t is given, make ^O work the same way as under
+	Pico, writing out the file without prompting.  And make it work even
+	better than Pico when the current file doesn't yet have a name.
+
 2015-10-28  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_redo): For an INSERT, 'u->mark_begin_lineno' is not
 	an actual line number, so spoof it.  It can be spoofed, because 'f'
